tomighty (0~20161102+git6afa215-1) UNRELEASED; urgency=medium

  * Upstream update.

 -- Katsuki Kobayashi <rare@tirasweel.org>  Tue, 08 Nov 2016 22:46:46 +0900

tomighty (0~20160927+gitf55209d-1) unstable; urgency=medium

  * Initial release.

 -- Katsuki Kobayashi <rare@tirasweel.org>  Sat, 01 Oct 2016 18:59:43 +0900