@@ -2,7 +2,7 @@ Source: tomighty
 Section: utils
 Priority: optional
 Maintainer: Katsuki Kobayashi <rare@tirasweel.org>
-Build-Depends: debhelper (>= 9), qt5-qmake, qtbase5-dev, qtmultimedia5-dev
+Build-Depends: debhelper (>= 9), qt5-qmake, qtbase5-dev, qtmultimedia5-dev, cdbs
 Standards-Version: 3.9.8
 Homepage: http://tomighty.org/
 #Vcs-Git: https://anonscm.debian.org/collab-maint/tomighty.git
@@ -10,7 +10,7 @@ Homepage: http://tomighty.org/
 
 Package: tomighty
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${cdbs:Depends}
 Description: desktop timer app for the Pomodoro Technique
  A desktop timer app for the Pomodoro Technique® written in C++ on top of Qt 5.
  .
